# typed-hnix

./: CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.freeze  flake.nix  typed-hnix.cabal
app/: Main.hs
src/Nix/: Typed.hs
test/: InlineText.hs  Spec.hs
