cabal-version:      2.4
name:               typed-hnix
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Nix.Typed

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.0.0
                    , hnix >= 0.16.0
                    , prettyprinter
                    , text
                    , template-haskell
                    , data-fix
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite spec
    default-language: Haskell2010
    type:            exitcode-stdio-1.0
    hs-source-dirs:  test
    main-is:         Spec.hs
    other-modules:   InlineText
    ghc-options:     -Wall -threaded
    build-depends:   base
                   , typed-hnix
                   , hspec
                   , shakespeare
                   , template-haskell
                   , text

